opal_core/src/snapshots/opal_core__parser__tests__expected_variable_name_error.snap
---
source: opal_core/src/parser.rs
expression: "parse_unsuccessful(\"var = 3;\", |parser| parser.parse_stmt())"
---
ParseError {
    span: Some(
        Span {
            start: 4,
            end: 5,
        },
    ),
    message: "expected variable name",
}
