opal_core/src/snapshots/opal_core__parser__tests__fun_decl.snap
---
source: opal_core/src/parser.rs
expression: "parse_successful(\"fun main() { var x = 3; }\", |parser|\n{ parser.parse_decl() })"
---
Fun {
    fun: Span {
        start: 0,
        end: 3,
    },
    name: "main",
    name_span: Span {
        start: 4,
        end: 8,
    },
    open_paren: Span {
        start: 8,
        end: 9,
    },
    params: [],
    close_paren: Span {
        start: 9,
        end: 10,
    },
    returns: None,
    body: Block {
        open_brace: Span {
            start: 11,
            end: 12,
        },
        stmts: [
            VarDecl {
                var: Span {
                    start: 13,
                    end: 16,
                },
                name: "x",
                name_span: Span {
                    start: 17,
                    end: 18,
                },
                equals: Span {
                    start: 19,
                    end: 20,
                },
                value: Int {
                    value: 3,
                    span: Span {
                        start: 21,
                        end: 22,
                    },
                },
                semicolon: Span {
                    start: 22,
                    end: 23,
                },
            },
        ],
        close_brace: Span {
            start: 24,
            end: 25,
        },
    },
}
