opal_core/src/snapshots/opal_core__parser__tests__func_decl.snap
---
source: opal_core/src/parser.rs
expression: "parse_successful(\"func main() { var x = 3; }\", |parser|\n{ parser.parse_decl() })"
---
Func {
    func: Span {
        start: 0,
        end: 4,
    },
    name: "main",
    name_span: Span {
        start: 5,
        end: 9,
    },
    open_paren: Span {
        start: 9,
        end: 10,
    },
    params: [],
    close_paren: Span {
        start: 10,
        end: 11,
    },
    returns: None,
    body: Block {
        open_brace: Span {
            start: 12,
            end: 13,
        },
        stmts: [
            VarDecl {
                var: Span {
                    start: 14,
                    end: 17,
                },
                name: "x",
                name_span: Span {
                    start: 18,
                    end: 19,
                },
                equals: Span {
                    start: 20,
                    end: 21,
                },
                value: Int {
                    value: 3,
                    span: Span {
                        start: 22,
                        end: 23,
                    },
                },
                semicolon: Span {
                    start: 23,
                    end: 24,
                },
            },
        ],
        close_brace: Span {
            start: 25,
            end: 26,
        },
    },
}
