opal_core/src/snapshots/opal_core__parser__tests__missing_closing_paren_error.snap
---
source: opal_core/src/parser.rs
expression: "parse_unsuccessful(\"(1 + 2\", |parser| parser.parse_expr(0))"
---
ParseError {
    span: None,
    message: "expected closing parenthesis",
}
