opal_core/src/snapshots/opal_core__parser__tests__nested_call_expr.snap
---
source: opal_core/src/parser.rs
expression: "parse_successful(\"foo(bar(1), 2)\", |parser| parser.parse_expr(0))"
---
Call {
    func: Var {
        name: "foo",
        span: Span {
            start: 0,
            end: 3,
        },
    },
    open_paren: Span {
        start: 3,
        end: 4,
    },
    args: [
        (
            Call {
                func: Var {
                    name: "bar",
                    span: Span {
                        start: 4,
                        end: 7,
                    },
                },
                open_paren: Span {
                    start: 7,
                    end: 8,
                },
                args: [
                    (
                        Int {
                            value: 1,
                            span: Span {
                                start: 8,
                                end: 9,
                            },
                        },
                        None,
                    ),
                ],
                close_paren: Span {
                    start: 9,
                    end: 10,
                },
            },
            Some(
                Span {
                    start: 10,
                    end: 11,
                },
            ),
        ),
        (
            Int {
                value: 2,
                span: Span {
                    start: 12,
                    end: 13,
                },
            },
            None,
        ),
    ],
    close_paren: Span {
        start: 13,
        end: 14,
    },
}
