opal_core/src/snapshots/opal_core__parser__tests__paren_expr.snap
---
source: opal_core/src/parser.rs
expression: "parse_successful(\"(1 + 2)\", |parser| parser.parse_expr(0))"
---
Parens {
    open_paren: Span {
        start: 0,
        end: 1,
    },
    expr: Infix {
        left: Int {
            value: 1,
            span: Span {
                start: 1,
                end: 2,
            },
        },
        op: Add,
        op_span: Span {
            start: 3,
            end: 4,
        },
        right: Int {
            value: 2,
            span: Span {
                start: 5,
                end: 6,
            },
        },
    },
    close_paren: Span {
        start: 6,
        end: 7,
    },
}
