opal_core/src/snapshots/opal_core__parser__tests__precedence_expr.snap
---
source: opal_core/src/parser.rs
expression: "parse_successful(\"1 + 2 * 3\", |parser| parser.parse_expr(0))"
---
Infix {
    left: Int {
        value: 1,
        span: Span {
            start: 0,
            end: 1,
        },
    },
    op: Add,
    op_span: Span {
        start: 2,
        end: 3,
    },
    right: Infix {
        left: Int {
            value: 2,
            span: Span {
                start: 4,
                end: 5,
            },
        },
        op: Mul,
        op_span: Span {
            start: 6,
            end: 7,
        },
        right: Int {
            value: 3,
            span: Span {
                start: 8,
                end: 9,
            },
        },
    },
}
