opal_core/src/snapshots/opal_core__parser__tests__unit_expr.snap
---
source: opal_core/src/parser.rs
expression: "parse_successful(\"()\", |parser| parser.parse_expr(0))"
---
Unit {
    open_paren: Span {
        start: 0,
        end: 1,
    },
    close_paren: Span {
        start: 1,
        end: 2,
    },
}
